[tool.poetry]
name = "site-project"
version = "0.1.0"
description = ""
authors = ["Egor Nikitin <ega.nik5674@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
